# deno

./: .appveyor.yml  .travis.yml  BUILD.gn  Cargo.toml  deno.gni
.github/workflows/: main.yml  rust.yml
build_extra/rust/: BUILD.gn  run.py  rust.gni
cli/: BUILD.gn  Cargo.toml  bindings.rs  compiler.rs  deno_dir.rs  deno_error.rs  dispatch_minimal.rs  errors.rs  file_fetcher.rs  flags.rs  global_state.rs  global_timer.rs  http_body.rs  http_util.rs  lib.rs  main.rs  msg.fbs  ops.rs  permissions.rs  resolve_addr.rs  resources.rs  state.rs  tokio_util.rs  worker.rs
cli/compilers/: js.rs  json.rs  ts.rs
cli/ops/: compiler.rs  dispatch_json.rs  dispatch_minimal.rs  fetch.rs  files.rs  io.rs  net.rs  process.rs  tls.rs  workers.rs
core/: Cargo.toml  bindings.rs  core.d.ts  http_bench.rs  isolate.rs  lib.rs  libdeno.rs  modules.rs  ops.rs  plugins.rs
core/examples/: http_bench.rs
core/libdeno/: api.cc  binding.cc  deno.h  internal.h  libdeno_test.cc  libdeno_test.js
js/: compiler.ts  deno.ts  dlopen.ts  native_bindings.ts  native_plugins.ts
lib_bindings/: BUILD.gn  Cargo.toml  binding_plugin.rs  dispatch.rs  errors.rs  lib.rs  loader.rs  plugin.rs
lib_bindings/test_binding_plugin/: BUILD.gn  Cargo.toml  lib.rs  main.ts
src/: cli.rs  compiler.rs  isolate.rs  main.rs  ops.rs  startup_data.rs
test_binding/: Cargo.toml  lib.rs  main.ts
test_binding_plugin/: BUILD.gn  Cargo.toml  lib.rs  main.ts
test_plugin/: Cargo.toml  main.ts
tests/: 033_native_bindings.test  033_native_bindings.ts  033_native_plugins.test  034_native_plugins.test  034_native_plugins.ts  034_native_plugins.ts.out  034_plugin.ts  native_binding.ts
tests/plugin/: BUILD.gn  Cargo.toml  lib.rs
tools/: format.py  integration_tests.py  permission_prompt_test.py  permission_prompt_test.ts  sync_third_party.py  test.py  test_util.py
