import("//build_extra/rust/rust.gni")

group("default") {
  testonly = true
  deps = [
    ":hyper_hello",
    "cli:cli_test",
    "cli:deno",
    "core:default",
    "core/libdeno:libdeno_test",
    "lib_bindings:default",
    "test_binding_plugin:test_binding_plugin",
  ]
}

rust_executable("hyper_hello") {
  source_root = "tools/hyper_hello.rs"
  extern_rlib = [
    "hyper",
    "ring",
  ]
}
