# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.
# Dummy package info required by `cargo fetch`.
# Use tools/sync_third_party.py to install deps after editing this file.
# Deno does not build with cargo. Deno uses a build system called gn.
# See build_extra/rust/BUILD.gn for the manually built configuration of rust
# crates.

[lib]
path = "lib.rs"

[package]
name = "deno_lib_bindings"
version = "0.6.0"
edition = "2018"

[dependencies]
deno = { path = "../core" }

hyper = "0.12.29"
