# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.
import("//build/toolchain/cc_wrapper.gni")
import("//build_extra/flatbuffers/flatbuffer.gni")
import("//build_extra/flatbuffers/rust/rust_flatbuffer.gni")
import("//build_extra/rust/rust.gni")
import("//third_party/v8/gni/v8.gni")
import("//third_party/v8/snapshot_toolchain.gni")
import("../deno.gni")

group("default") {
  testonly = true
  deps = [
    ":test_binding_plugin",
  ]
}

if (is_linux) {
  shared_lib_prefix = "lib"
  shared_lib_suffix = "so"
} else if (is_mac) {
  shared_lib_prefix = "lib"
  shared_lib_suffix = "dylib"
} else if (is_win) {
  shared_lib_prefix = ""
  shared_lib_suffix = "dll"
} else {
  assert(false, "Unsupported platform")
}

cargo_build("test_binding_plugin") {
  package_name = "test_binding_plugin"
  outputs = [
    "$root_build_dir/$shared_lib_prefix" + "test_binding_plugin.$shared_lib_suffix",
  ]
  inputs = [
    "Cargo.toml",
    "lib.rs",
    "main.ts",
  ]
  deps = [
    "../core:deno",
  ]
}
