# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.

[package]
name = "test_plugin"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
deno = { path = "../../core" }

futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }